syntax = "proto3";
package user;

service UserService {
    rpc Get(UserRequest) returns (UserResponse) {}
}

message UserRequest {
    string name = 1;
}

message UserResponse {
    string id   = 1;
    string name = 2;
}